[package]
name = "axdevice"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
log = "=0.4.19"
cfg-if = "1.0"
serde = { version = "1.0.204", default-features = false, features = ["derive", "alloc"] }
# System independent crates provided by ArceOS.
axerrno = "0.1.0"
memory_addr = "0.3.0"
axaddrspace  = { path = "../axaddrspace" }
axdevice_base = { path = "../axdevice_crates/axdevice_base" }

vgic = { path = "../axdevice_crates/vgic" }