[package]
name = "axdevice"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
log = "0.4"
cfg-if = "1.0"

# System independent crates provided by ArceOS.
axerrno = "0.1.0"
memory_addr = "0.3"
kspin = "0.1"
lazyinit = "0.2"
timer_list = "0.1.0"
aarch64-cpu = "9.4"
tock-registers = "0.8"
axvmconfig = { git = "https://github.com/arceos-hypervisor/axvmconfig.git", default-features = false }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git" }
arm_vgic = { git = "https://github.com/arceos-hypervisor/arm_vgic.git" }
axstd = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm_rebase" }
percpu = { version = "0.1.4", features = ["arm-el2"] }
